overflow fix

--- a/main.css
+++ b/main.css
@@ -1,4 +1,6 @@
-
+html {
+  overflow-x: hidden;
+}
 body {
   color: white;
   font-family: 'Rajdhani', sans-serif;
